#7 Multiple cut/copy/paste ok

--- a/src/views/view-properties.html
+++ b/src/views/view-properties.html
@@ -121,6 +121,7 @@ Polymer({
 			this.updating = false;
 		} else setTimeout(function() {
 			that.set("params", []);
+			if(!that.selection) return that.update();
 			that.set("params", that.getProperties(that.selection[0]));
 			that.updating = false;
 		}, 50);
